unpackaged/main/default/objects/Referral_Attribute__c/Referral_Attribute__c.object-meta.xml
<CustomObject>
    <label>Referral Attribute</label>
    <nameField>
        <displayFormat>RA-{000000}</displayFormat>
        <label>Referral Attribute</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>