unpackaged/main/default/objects/Referral_Attribute__c/fields/Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Value__c</fullName>
    <description>This field will capture the value of the attribute that we need to store for a partner.</description>
    <inlineHelpText>This field will capture the value of the attribute that we need to store for a partner.</inlineHelpText>
    <label>Attribute Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>