unpackaged/main/default/objects/Referral_Attribute__c/fields/Customer_Form__c.field-meta.xml
<CustomField>
    <fullName>Customer_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Form</label>
    <referenceTo>Customer_Form__c</referenceTo>
    <relationshipLabel>Referral Attributes</relationshipLabel>
    <relationshipName>Referral_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>