unpackaged/main/default/objects/Referral_Attribute__c/fields/Referral_Summary__c.field-meta.xml
<CustomField>
    <fullName>Referral_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a lookup to the referral summary object.</description>
    <inlineHelpText>This field is a lookup to the referral summary object.</inlineHelpText>
    <label>Referral Summary</label>
    <referenceTo>Referral_Summary__c</referenceTo>
    <relationshipLabel>Referral Attributes</relationshipLabel>
    <relationshipName>Referral_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>